added more image assets and adjusted colors to match designs

--- a/Solemate/View/Base.lproj/LaunchScreen.storyboard
+++ b/Solemate/View/Base.lproj/LaunchScreen.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="K6E-8a-dgs">
-                                <rect key="frame" x="0.0" y="148" width="375" height="343"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launch-logo" translatesAutoresizingMaskIntoConstraints="NO" id="K6E-8a-dgs">
+                                <rect key="frame" x="12" y="155" width="350" height="343"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -33,6 +33,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="347" height="190"/>
+        <image name="launch-logo" width="212" height="56"/>
     </resources>
 </document>
